--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/date-fns": "^2.5.3",
     "antd": "^5.24.5",
+    "data-fns": "^1.1.0",
+    "date-fns": "^4.1.0",
     "qrcode.react": "^3.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
